--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "fuse.js": "^7.0.0",
     "notistack": "^3.0.1",
     "preact": "^10.19.6",
     "react-icons": "^5.2.1",
